fixed overflow in profile__info and edit link bug

--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -17,7 +17,7 @@
   background-color: white;
   width: 639px;
   align-items: center;
-  padding: 0 24px;
+  padding: 0 12px;
   border: 1px solid var(--border-accent);
   border-radius: 61px;
   color: var(--small-text);
